@@ -458,7 +458,6 @@ int unique_service_name(char *cmd, SsdpEvent *Evt)
 	char *ptr3 = NULL;
 	int CommandFound = 0;
 	size_t n = (size_t)0;
-	int rc = 0;
 
 	if (strstr(cmd, "uuid:schemas") != NULL) {
 		ptr1 = strstr(cmd, ":device");
@@ -471,10 +470,10 @@ int unique_service_name(char *cmd, SsdpEvent *Evt)
 		else
 			return -1;
 		if (ptr3 != NULL) {
-			rc = snprintf(Evt->UDN, sizeof(Evt->UDN), "uuid:%s",
-				ptr3 + 1);
-			if (rc < 0 || (unsigned int) rc >= sizeof(Evt->UDN))
+			if (strlen("uuid:") + strlen(ptr3 + 1) >= sizeof(Evt->UDN))
 				return -1;
+			snprintf(Evt->UDN, sizeof(Evt->UDN), "uuid:%s",
+				ptr3 + 1);
 		}
 		else
 			return -1;
@@ -483,10 +482,10 @@ int unique_service_name(char *cmd, SsdpEvent *Evt)
 			n = (size_t)ptr3 - (size_t)ptr1;
 			strncpy(TempBuf, ptr1, n);
 			TempBuf[n] = '\0';
-			rc = snprintf(Evt->DeviceType, sizeof(Evt->DeviceType),
-				"urn%s", TempBuf);
-			if (rc < 0 || (unsigned int) rc >= sizeof(Evt->DeviceType))
+			if (strlen("urn") + strlen(TempBuf) >= sizeof(Evt->DeviceType))
 				return -1;
+			snprintf(Evt->DeviceType, sizeof(Evt->DeviceType),
+				"urn%s", TempBuf);
 		} else
 			return -1;
 		return 0;
